assets/stylesheets/_openify/header.less
header {
    height: 100%;
    background-image: url('../../images/header.jpg');
    background-position: 0 0;
    background-repeat: no-repeat;
    background-size: cover;
    > .logo-container {
        position: relative;
        padding-top: 25%;
        width: 50%;
        margin: auto;
        > img {
            width: 100%;

        }
    }
    > .openify-scroll-to-container {
        position: absolute;
        width: 100%;
        bottom: 10%;
        > .openify-scroll-to {
            width: 50px;
            height: 50px;
            background-image: url("/assets/images/scroll.png");
            background-position: 0 0;
            cursor: pointer;
            margin: auto;
            &:hover {
                background-position: 0 50px;
            }
        }
    }
}

